--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                 <div class="song-text">
                     <h3>In Their Eyes</h3>
                     <p>An emotional pop ballad about not being enough in their eyes, but learning to finally be enough for yourself.</p>
+                    <p><strong>Out Now on YouTube</strong></p>
                 </div>
             </div>
         </div>
@@ -232,4 +233,5 @@
     </script>
 
 </body>
+
 </html>
