--- a/index.html
+++ b/index.html
@@ -21,6 +21,60 @@
             overflow-x:hidden;
         }
 
+        header {
+            text-align: center;
+            padding: 30px 0;
+            background-color: #222;
+            color: white;
+        }
+
+        header img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 10px;
+        }
+
+        header h1 {
+            margin: 5px 0;
+        }
+
+        .social-links a {
+            margin: 0 10px;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+        }
+
+        section {
+            max-width: 700px;
+            margin: 40px auto;
+            padding: 0 20px;
+        }
+
+        .song {
+            margin-bottom: 50px;
+            text-align: center;
+        }
+
+        .song img {
+            width: 300px;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        .song h2 {
+            margin: 15px 0 5px 0;
+        }
+
+        audio {
+            display: none; /* audio hidden */
+        }
+
+
         /* Navbar */
         nav {
             position:fixed;
@@ -144,8 +198,14 @@
 
     <div class="hero">
         <div class="hero-content">
+            <img src="niell.jpg" alt="My Profile Picture">
             <h1>NIELL</h1>
             <p>Not for their eyes, but for my own path.</p>
+        </div>
+        <div class="social-links">
+            <a href="https://youtube.com/@niellkmrdn?si=TjdNOpgXDywZQeAc" target="_blank">YouTube</a>
+            <a href="https://tiktok.com/@niellkmrdn" target="_blank">TikTok</a>
+            <a href="https://www.instagram.com/niellkmrdn?igsh=ZXlnNGh6MWptb2li" target="_blank">Instagram</a>
         </div>
     </div>
 
