--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             overflow-x:hidden;
         }
 
+        header {
+            text-align: center;
+            padding: 30px 0;
+            background-color: #222;
+            color: white;
+        }
+
+        header h1 {
+            margin: 5px 0;
+        }
+
         .social-links a {
             margin: 0 10px;
             text-decoration: none;
@@ -37,14 +48,6 @@
         .song {
             margin-bottom: 50px;
             text-align: center;
-        }
-
-        .song img {
-            width: 300px;
-            height: 300px;
-            object-fit: cover;
-            border-radius: 10px;
-            cursor: pointer;
         }
 
         .song h2 {
@@ -208,7 +211,6 @@
         
         <!-- Song 1 -->
         <div class="card" id="songCard">
-            <img src="single1.jpg" alt="Behind The Façade">
             <h3>Behind The Façade</h3>
             <p>Exploring the hidden emotions behind the mask we show the world.</p>
             <audio src="Niell - Behind The Façade.mp3" id="audio1"></audio>
@@ -218,7 +220,6 @@
 
 
         <div class="card songCard">
-            <img src="single2.jpg" alt="In Their Eyes">
             <h3>In Their Eyes</h3>
             <p>A journey from self-doubt to self-acceptance.</p>
             <audio src="Niell - In Their Eyes.mp3" id="audio2"></audio>
@@ -227,7 +228,7 @@
     </section>
 
     <footer>
-        © 2026 NIELLKMRDN. Independent Artist.
+        © 2026 niellkmrdn. Independent Artist.
     </footer>
 
     <script>
@@ -262,5 +263,6 @@
     </script>
 </body>
 </html>
+
 
 
