--- a/index.html
+++ b/index.html
@@ -186,9 +186,11 @@
             <p>Not for their eyes, but for my own path.</p>
         </div>
         <div class="social-links">
-            <a href="https://youtube.com/@niellkmrdn?si=TjdNOpgXDywZQeAc" target="_blank">YouTube</a>
-            <a href="https://tiktok.com/@niellkmrdn" target="_blank">TikTok</a>
+        <p>
+            <a href="https://youtube.com/@niellkmrdn?si=TjdNOpgXDywZQeAc">YouTube</a> |
+            <a href="https://tiktok.com/@niellkmrdn">TikTok</a> |
             <a href="https://www.instagram.com/niellkmrdn?igsh=ZXlnNGh6MWptb2li" target="_blank">Instagram</a>
+        </p>
         </div>
     </div>
 
@@ -263,6 +265,7 @@
     </script>
 </body>
 </html>
+
 
 
 
