--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Niell | Official</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
-
     <style>
         * {
             margin:0;
@@ -20,44 +19,6 @@
             color:#fff;
             overflow-x:hidden;
         }
-
-        header {
-            text-align: center;
-            padding: 30px 0;
-            background-color: #222;
-            color: white;
-        }
-
-        header h1 {
-            margin: 5px 0;
-        }
-
-        .social-links a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: white;
-            font-weight: bold;
-        }
-
-        section {
-            max-width: 700px;
-            margin: 40px auto;
-            padding: 0 20px;
-        }
-
-        .song {
-            margin-bottom: 50px;
-            text-align: center;
-        }
-
-        .song h2 {
-            margin: 15px 0 5px 0;
-        }
-
-        audio {
-            display: none; /* audio hidden */
-        }
-
 
         /* Navbar */
         nav {
@@ -99,7 +60,7 @@
             content:"";
             position:absolute;
             inset:0;
-            background:rgba(0,0,0,0.7);
+            background:linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.9));
         }
 
         .hero-content {
@@ -129,7 +90,7 @@
 
         section {
             padding:120px 20px;
-            max-width:900px;
+            max-width:1000px;
             margin:auto;
         }
 
@@ -144,28 +105,50 @@
             margin-bottom:20px;
         }
 
+        .profile-img {
+            width:180px;
+            height:180px;
+            border-radius:50%;
+            object-fit:cover;
+            margin-bottom:30px;
+            box-shadow:0 0 40px rgba(255,255,255,0.2);
+        }
+
+        .social-links a {
+            display:inline-block;
+            margin-right:15px;
+            color:#aaa;
+            text-decoration:none;
+            transition:0.3s;
+        }
+        .social-links a:hover { color:#fff; }
+
         .card {
             background:#111;
             padding:30px;
             border-radius:20px;
             box-shadow:0 20px 40px rgba(0,0,0,0.6);
             transition:0.4s;
+            margin-bottom:60px;
         }
-        .card:hover { transform:scale(1.03); }
+        .card:hover { transform:scale(1.02); }
 
-        iframe { width:100%; height:400px; border-radius:15px; }
+        .song-cover {
+            width:100%;
+            border-radius:15px;
+            margin-bottom:20px;
+        }
 
         footer {
-            text-align:center; padding:40px 20px;
-            border-top:1px solid #222; color:#666;
+            text-align:center;
+            padding:40px 20px;
+            border-top:1px solid #222;
+            color:#666;
         }
 
         @media(max-width:768px){
             .hero h1{
                 font-size:2.5rem;
-            }
-            iframe{
-                height:250px;
             }
         }
     </style>
@@ -182,20 +165,18 @@
 
     <div class="hero">
         <div class="hero-content">
+            <img src="niell.jpg" alt="My Profile Picture">
             <h1>NIELL</h1>
             <p>Not for their eyes, but for my own path.</p>
-        </div>
-        <div class="social-links">
-        <p>
-            <a href="https://youtube.com/@niellkmrdn?si=TjdNOpgXDywZQeAc">YouTube</a> |
-            <a href="https://tiktok.com/@niellkmrdn">TikTok</a> |
-            <a href="https://www.instagram.com/niellkmrdn?igsh=ZXlnNGh6MWptb2li" target="_blank">Instagram</a>
-        </p>
         </div>
     </div>
 
     <section id="about">
         <h2>About Me</h2>
+
+        <!-- PROFILE IMAGE -->
+        <img src="niell.jpg" alt="Profile Photo" class="profile-img">
+
         <p><strong>Full Name:</strong> Muhammad Arif Danial bin Kamarudin</p>
         <p><strong>Nickname:</strong> Niell</p>
         <p><strong>Age:</strong> 16</p>
@@ -206,6 +187,13 @@
         <p>
             His music transforms quiet struggles into strength — creating late-night songs that feel personal and real.
         </p>
+
+        <!-- SOCIAL LINKS -->
+        <div class="social-links">
+            <a href="https://youtube.com/" target="_blank">YouTube</a>
+            <a href="https://instagram.com/" target="_blank">Instagram</a>
+            <a href="https://tiktok.com/" target="_blank">TikTok</a>
+        </div>
     </section>
 
     <section id="songs">
@@ -213,59 +201,45 @@
         
         <!-- Song 1 -->
         <div class="card" id="songCard">
+            <img src="single1.jpg" alt="Behind The Façade Cover" class="song-cover">
             <h3>Behind The Façade</h3>
             <p>Exploring the hidden emotions behind the mask we show the world.</p>
-            <audio src="Niell - Behind The Façade.mp3" id="audio1"></audio>
+            <audio src="Behind-The-Façade.mp3"></audio>
         </div>
 
-        <br><br>
-
-
+        <!-- SONG 2 -->
         <div class="card songCard">
+            <img src="single2.jpg" alt="In Their Eyes">
             <h3>In Their Eyes</h3>
             <p>A journey from self-doubt to self-acceptance.</p>
-            <audio src="Niell - In Their Eyes.mp3" id="audio2"></audio>
+            <audio src="In-Their-Eyes.mp3"></audio>
         </div>
 
     </section>
 
     <footer>
-        © 2026 niellkmrdn. Independent Artist.
+        © 2026 NIELLKMRDN. Independent Artist.
     </footer>
 
     <script>
-        const songs = document.querySelectorAll('.song');
-        let currentAudio = null;
+        const cards = document.querySelectorAll('.songCard');
 
-        const options = {
-            root: null,
-            rootMargin: '0px',
-            threshold: 0.5
-        }
-
-        const callback = (entries, observer) => {
+        const observer = new IntersectionObserver(entries => {
             entries.forEach(entry => {
                 const audio = entry.target.querySelector('audio');
-                if (entry.isIntersecting) {
-                    if (currentAudio && currentAudio !== audio) {
-                        currentAudio.pause();
-                        currentAudio.currentTime = 0;
-                    }
+                if(entry.isIntersecting){
+                    document.querySelectorAll('audio').forEach(a => {
+                        a.pause();
+                        a.currentTime = 0;
+                    });
+                    audio.src = audio.dataset.audio;
                     audio.play();
-                    currentAudio = audio;
-                } else {
-                    audio.pause();
-                    audio.currentTime = 0;
                 }
             });
-        }
+        }, { threshold:0.6 });
 
-        const observer = new IntersectionObserver(callback, options);
-        songs.forEach(song => observer.observe(song));
+        cards.forEach(card => observer.observe(card));
     </script>
+
 </body>
 </html>
-
-
-
-
