index.html UP10

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 
         <!-- SOCIAL LINKS -->
         <div class="social-links">
-            <a href="https://youtube.com/" target="_blank">YouTube</a>
-            <a href="https://instagram.com/" target="_blank">Instagram</a>
-            <a href="https://tiktok.com/" target="_blank">TikTok</a>
+            <a href="https://youtube.com/@niellkmrdn?si=TjdNOpgXDywZQeAc" target="_blank">YouTube</a>
+            <a href="https://www.instagram.com/niellkmrdn?igsh=ZXlnNGh6MWptb2li" target="_blank">Instagram</a>
+            <a href="https://tiktok.com/@niellkmrdn" target="_blank">TikTok</a>
         </div>
     </section>
 
@@ -245,4 +245,5 @@
 
 </body>
 </html>
+
 
