index.html UP11

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         </div>
 
         <!-- SONG 2 -->
-        <div class="card songCard">
+        <div class="card" id="songCard">
             <img src="single2.jpg" alt="In Their Eyes" class="song-cover">
             <h3>In Their Eyes</h3>
             <p>A journey from self-doubt to self-acceptance.</p>
@@ -245,5 +245,6 @@
 
 </body>
 </html>
+
 
 
