index.html UP13

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <h2>My Songs</h2>
         
         <!-- Song 1 -->
-        <div class="card "songCard">
+        <div class="card songCard">
             <img src="single1.jpg" alt="Behind The Façade Cover" class="song-cover">
             <h3>Behind The Façade</h3>
             <p>Exploring the hidden emotions behind the mask we show the world.</p>
@@ -207,7 +207,7 @@
         </div>
 
         <!-- SONG 2 -->
-        <div class="card "songCard">
+        <div class="card songCard">
             <img src="single2.jpg" alt="In Their Eyes" class="song-cover">
             <h3>In Their Eyes</h3>
             <p>A journey from self-doubt to self-acceptance.</p>
@@ -245,6 +245,7 @@
 
 </body>
 </html>
+
 
 
 
